ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.9.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      assert: ["b562f33e55fac5be5e491ef29dde6f6b"] != [""] are not equal : A3
      Error: Printing Stack Trace
      at shell/utils.js:35:7
      at shell/utils.js:46:1
      at Function.eq (shell/utils.js:72:1)
      at jstests/dbhash.js:35:8
      at _funcs1:7:40
      at Function.timeFunc (shell/utils.js:283:9)
      at _funcs1:7:17
      at Array.forEach (native)
      at Number.<anonymous> (_funcs1:4:6)
      at _funcs1:122:65
      Sat Jul 23 20:10:48 exec error: shell/utils.js:47 ["b562f33e55fac5be5e491ef29dde6f6b"] != [""] are not equal : A3
      throw msg;

      assert: [""] != ["44630b03208785a5d03c20cc3d56c2de"] are not equal : A3
      Error: Printing Stack Trace
      at shell/utils.js:19:7
      at shell/utils.js:30:1
      at Function.eq (shell/utils.js:56:1)
      at jstests/dbhash.js:35:8
      at _funcs1:7:40
      at Function.timeFunc (shell/utils.js:267:9)
      at _funcs1:7:17
      at Array.forEach (native)
      at Number.<anonymous> (_funcs1:4:6)
      at _funcs1:122:65
      Mon Jun 6 19:20:20 exec error: shell/utils.js:31 [""] != ["44630b03208785a5d03c20cc3d56c2de"] are not equal : A3
      throw msg;

      One guess right now is that some collection in the test db is missing an id index while one dbhash command has a read mutex, causing dbhash to abort without generating output for all collections. In both failure cases I've seen this test runs at the same time as geo_center_spere2.js but that could be a red herring.

            Assignee:
            Aaron Staple (Inactive)
            Reporter:
            Aaron Staple (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: