SERVER-3475 ignore certain collections without an _id index in dbhash command